--- a/vaadin-details-flow-demo/pom.xml
+++ b/vaadin-details-flow-demo/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-notification-flow</artifactId>
-            <version>1.3.0.beta1</version>
+            <version>1.3.0</version>
         </dependency>
     </dependencies>
 
