--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,6 @@
 	<modules>
 		<module>vaadin-details-flow</module>
 		<module>vaadin-details-flow-testbench</module>
-		<module>vaadin-details-flow-integration-tests</module>
 		<module>vaadin-details-flow-demo</module>
 	</modules>
     
@@ -48,5 +47,21 @@
             <url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
         </repository>
     </repositories>
+
+
+	<profiles>
+		<profile>
+			<id>default</id>
+			<activation>
+				<property>
+					<name>!release</name>
+				</property>
+			</activation>
+			<modules>
+				<module>vaadin-details-flow-integration-tests</module>
+				<module>vaadin-details-flow-integration-tests/pom-bower-mode.xml</module>
+			</modules>
+		</profile>
+	</profiles>
 
 </project>
