Add Bower test profile

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,17 @@ language: java
 jdk: oraclejdk8
 dist: trusty
 
-script: mvn -B verify -Dvaadin.productionMode -Dcom.vaadin.testbench.Parameters.testsInParallel=2 -Dvaadin.proKey=$VAADIN_PRO_KEY -Dsauce.user=$SAUCE_USER -Dsauce.sauceAccessKey=$SAUCE_ACCESSKEY
+script: mvn -B verify -Dvaadin.productionMode -Dcom.vaadin.testbench.Parameters.testsInParallel=2 -Dvaadin.proKey=$VAADIN_PRO_KEY -Dsauce.user=$SAUCE_USER -Dsauce.sauceAccessKey=$SAUCE_ACCESSKEY -P$IT_PROFILE
 
 # Cache requires a master build
 branches:
   only:
     - master
+
+env:
+  matrix:
+    - IT_PROFILE=npm-it,!bower-it
+    - IT_PROFILE=bower-it,!npm-it
 
 cache:
   directories:
