Enable bower-it profile by default

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,9 @@
 		</profile>
 		<profile>
 			<id>bower-it</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<modules>
 				<module>vaadin-details-flow-integration-tests/pom-bower-mode.xml</module>
 			</modules>
