--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ vaadin-details-flow-integration-tests/error-screenshots/
 .vscode/*
 
 # The following files are generated/updated by flow-maven-plugin
-package.json
-webpack.config.js
+package*.json
+webpack.*.js
+tsconfig.json
+types.d.ts
 node_modules/
